--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,8 +1,17 @@
 /// Variables for SCSS files
 
 ///////////// THIS APP'S VARIABLES /////////////////
+$deepCharcoal: #1c1c1e;
+$midnightBlue: #2a2d34;
+$burntCopper: #c47c41;
+$sageSmoke: #7a8678;
+$crimsonRust: #8b2f39;
+$softIvory: #e6e1d3;
+$mistGray: #a0a0a2;
 
 ///////////// BOOTSTRAP VARIABLES //////////////////
+
+// --bs-body-bg: #fff;
 /* stylelint-disable-next-line */
 $font-family-sans-serif:
   'Open Sans',
